Height fix for typing on mobile

--- a/src/components/Question.scss
+++ b/src/components/Question.scss
@@ -25,8 +25,13 @@
       width: 100%;
       gap: 12px;
 
+      @at-root .question--mode-type &#{&} {
+        @media (max-height: 480px) {
+          display: none;
+        }
+      }
+
       &__left {
-        // Required for span ellipses to work
         width: calc(100% - var(--minimap-size) - $top-gap);
       }
 
